--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/praveenprope/advancedCounter",
+  "homepage": "https://praveenprope.github.io/advancedCounter",
   "name": "advancedcounter",
   "private": true,
   "version": "0.0.0",
