--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "homepage": "https://praveenprope.github.io/advancedCounter",
-  "name": "advancedcounter",
+  "name": "advancedCounter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "gh-pages -d build",
-    "dev": "vite",
     "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview"
   },
