--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://praveenprope.github.io/advancedCounter",
-  "name": "advancedCounter",
+  "homepage": "https://praveenprope.github.io/yashCounter",
+  "name": "yashCounter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
